--- a/index.html
+++ b/index.html
@@ -4,10 +4,36 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Testing</title>
+
+    <!-- font awesome cdn  -->
+    <script src="https://kit.fontawesome.com/e085ef6fdb.js" crossorigin="anonymous"></script>
+
+    <!-- tailwind CDN  -->
+    <script src="https://cdn.tailwindcss.com"></script>
 </head>
 <body>
 
-    <h1>testing git repository</h1>
+    <!-- Header section  -->
+     <header class="">
+        <!-- menu section  -->
+<div class="flex items-center max-w-7xl mx-auto pt-9 px-5 border border-green-400 md:border-none pb-4">
+    <div class=" flex-1">
+        <img src="./image/logo-header.png" alt="">
+     </div>
+     <ul class="flex gap-8 w-1/3 font-medium text-xl">
+        <li><a class=" hidden md:block" href="#">Product</a></li>
+        <li><a class=" hidden md:block" href="#">Services</a></li>
+        <li><a class=" hidden md:block" href="#">Contact us</a></li>
+     </ul>
+     <div class=" flex gap-x-3 items-center ">
+        <i class="fa-solid fa-magnifying-glass text-xl "></i>
+        <i class="fa-solid fa-cart-shopping text-xl "></i>
+        <button class=" border border-green-400 px-8 py-3 rounded-lg font-medium text-xl">Login</button>
+        <button class="bg-green-400 text-white px-8 py-3 rounded-lg font-medium text-xl">Register</button>
+     </div>
+     <i class="fa-solid fa-bars md:hidden text-3xl text-green-400"></i>
+</div>
+     </header>
     
 </body>
 </html>
