--- a/index.html
+++ b/index.html
@@ -10,29 +10,54 @@
 
     <!-- tailwind CDN  -->
     <script src="https://cdn.tailwindcss.com"></script>
+
+    <script>
+        tailwind.config = {
+          theme: {
+            extend: {
+              colors: {
+                clifford: '#da373d',
+                'primary-color':'rgba(17, 17, 17, 1)',
+                'green-color':'rgba(23, 152, 0, 1)',
+              }
+            }
+          }
+        }
+      </script>
 </head>
-<body>
+<body class="text-primary-color">
 
     <!-- Header section  -->
-     <header class="">
-        <!-- menu section  -->
+     <header class="bg-gradient-to-b from-[#FFFFFF] to-[#EFEBE3]">
+        <!-- menu area  -->
 <div class="flex items-center max-w-7xl mx-auto pt-9 px-5 border border-green-400 md:border-none pb-4">
     <div class=" flex-1">
         <img src="./image/logo-header.png" alt="">
      </div>
-     <ul class="flex gap-8 w-1/3 font-medium text-xl">
+     <ul class="flex gap-8 w-2/5 lg:1/3 font-medium text-xl">
         <li><a class=" hidden md:block" href="#">Product</a></li>
         <li><a class=" hidden md:block" href="#">Services</a></li>
         <li><a class=" hidden md:block" href="#">Contact us</a></li>
      </ul>
      <div class=" flex gap-x-3 items-center ">
-        <i class="fa-solid fa-magnifying-glass text-xl "></i>
-        <i class="fa-solid fa-cart-shopping text-xl "></i>
-        <button class=" border border-green-400 px-8 py-3 rounded-lg font-medium text-xl">Login</button>
-        <button class="bg-green-400 text-white px-8 py-3 rounded-lg font-medium text-xl">Register</button>
+        <i class="fa-solid fa-magnifying-glass text-xl  hidden lg:block"></i>
+        <i class="fa-solid fa-cart-shopping text-xl  hidden lg:block"></i>
+        <button class=" border border-green-color px-8 py-3 rounded-lg font-medium text-xl hidden md:block">Login</button>
+        <button class="bg-green-color text-white px-8 py-3 rounded-lg font-medium text-xl hidden md:block">Register</button>
      </div>
-     <i class="fa-solid fa-bars md:hidden text-3xl text-green-400"></i>
+     <i class="fa-solid fa-bars md:hidden text-3xl text-green-color"></i>
 </div>
+
+        <!-- banner area  -->
+         <section class="">
+            <h1 class="text-4xl md:text-5xl lg:text-6xl font-semibold text-center mt-24">Freshness <span class="text-green-color">You Can</span> <br>
+                <span class="text-green-color">Count</span> On, Prices You’ll Love!
+            </h1>
+            <p class="text-center font-normal md:text-xl lg:w-6/12 w-9/12 mx-auto my-9">Shop your daily essentials at unbeatable prices. From fresh produce to pantry staples, we’ve got you covered every day!</p>
+            <div class="md:w-4/5 lg:w-4/6 mx-auto">
+                <img class="w-full" src="./image/hero-vegetables.png" alt="">
+            </div>
+         </section>
      </header>
     
 </body>
