service section structure done

--- a/index.html
+++ b/index.html
@@ -59,6 +59,24 @@
             </div>
          </section>
      </header>
+
+     <main>
+        <!-- Service section -->
+         <section class="">
+            <h1 class="text-4xl font-semibold text-green-color">Service</h1>
+            <!-- Service cards  -->
+             <div class="">
+                <!-- card 1 -->
+                 <div class="">
+                    <img src="./image/service.png" alt="">
+                    <h2>24/7 Services </h2>
+                    <p>We give our customer 24/7 service. Anyone can contact us any time. Our customer are satisfied</p>
+                    <p>We deliver with in 20 min. If we fail to deliver our product in time then we will give it free </p>
+                    <p>We provide high quality product. We make sure to our customer our product is good and fresh</p>
+                 </div>
+             </div>
+         </section>
+     </main>
     
 </body>
 </html>
