--- a/index.html
+++ b/index.html
@@ -17,20 +17,21 @@
             extend: {
               colors: {
                 clifford: '#da373d',
-                'primary-color':'rgba(17, 17, 17, 1)',
-                'green-color':'rgba(23, 152, 0, 1)',
+                'text-color':'rgba(17, 17, 17, 1)',
+                'primary-color':'rgba(23, 152, 0, 1)',
+                'secondary-color':'rgba(239, 235, 227, 1)',
               }
             }
           }
         }
       </script>
 </head>
-<body class="text-primary-color">
+<body class="text-text-color">
 
     <!-- Header section  -->
      <header class="bg-gradient-to-b from-[#FFFFFF] to-[#EFEBE3]">
         <!-- menu area  -->
-<div class="flex items-center max-w-7xl mx-auto pt-9 px-5 border border-green-400 md:border-none pb-4">
+<div class="flex items-center max-w-7xl mx-auto pt-9 px-5 border border-primary-color md:border-none pb-4">
     <div class=" flex-1">
         <img src="./image/logo-header.png" alt="">
      </div>
@@ -42,16 +43,16 @@
      <div class=" flex gap-x-3 items-center ">
         <i class="fa-solid fa-magnifying-glass text-xl  hidden lg:block"></i>
         <i class="fa-solid fa-cart-shopping text-xl  hidden lg:block"></i>
-        <button class=" border border-green-color px-8 py-3 rounded-lg font-medium text-xl hidden md:block">Login</button>
-        <button class="bg-green-color text-white px-8 py-3 rounded-lg font-medium text-xl hidden md:block">Register</button>
+        <button class=" border border-primary-color px-8 py-3 rounded-lg font-medium text-xl hidden md:block">Login</button>
+        <button class="bg-primary-color text-white px-8 py-3 rounded-lg font-medium text-xl hidden md:block">Register</button>
      </div>
-     <i class="fa-solid fa-bars md:hidden text-3xl text-green-color"></i>
+     <i class="fa-solid fa-bars md:hidden text-3xl text-primary-color"></i>
 </div>
 
         <!-- banner area  -->
          <section class="">
-            <h1 class="text-4xl md:text-5xl lg:text-6xl font-semibold text-center mt-24">Freshness <span class="text-green-color">You Can</span> <br>
-                <span class="text-green-color">Count</span> On, Prices You’ll Love!
+            <h1 class="text-4xl md:text-5xl lg:text-6xl font-semibold text-center mt-24">Freshness <span class="text-primary-color">You Can</span> <br>
+                <span class="text-primary-color">Count</span> On, Prices You’ll Love!
             </h1>
             <p class="text-center font-normal md:text-xl lg:w-6/12 w-9/12 mx-auto my-9">Shop your daily essentials at unbeatable prices. From fresh produce to pantry staples, we’ve got you covered every day!</p>
             <div class="md:w-4/5 lg:w-4/6 mx-auto">
@@ -62,17 +63,27 @@
 
      <main>
         <!-- Service section -->
-         <section class="">
-            <h1 class="text-4xl font-semibold text-green-color">Service</h1>
+         <section class="my-36 max-w-7xl mx-auto">
+            <h1 class="text-4xl font-semibold text-primary-color mb-12 mx-4">Service</h1>
             <!-- Service cards  -->
-             <div class="">
+             <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mx-4">
                 <!-- card 1 -->
-                 <div class="">
-                    <img src="./image/service.png" alt="">
-                    <h2>24/7 Services </h2>
-                    <p>We give our customer 24/7 service. Anyone can contact us any time. Our customer are satisfied</p>
-                    <p>We deliver with in 20 min. If we fail to deliver our product in time then we will give it free </p>
-                    <p>We provide high quality product. We make sure to our customer our product is good and fresh</p>
+                 <div class="bg-secondary-color p-8 rounded-2xl">
+                    <img class="mx-auto" src="./image/service.png" alt="">
+                    <h2 class="text-center text-2xl font-semibold pt-6">24/7 Services </h2>
+                    <p class="text-center text-xl font-light py-3">We give our customer 24/7 service. Anyone can contact us any time. Our customer are satisfied</p>
+                 </div>
+                <!-- card 2 -->
+                 <div class="bg-secondary-color p-8 rounded-2xl">
+                    <img class="mx-auto" src="./image/delivery.png" alt="">
+                    <h2 class="text-center text-2xl font-semibold pt-6">24/7 Services </h2>
+                    <p class="text-center text-xl font-light py-3">We deliver with in 20 min. If we fail to deliver our product in time then we will give it free </p>
+                 </div>
+                <!-- card 3 -->
+                 <div class="bg-secondary-color p-8 rounded-2xl">
+                    <img class="mx-auto" src="./image/healthy.png" alt="">
+                    <h2 class="text-center text-2xl font-semibold pt-6">24/7 Services </h2>
+                    <p class="text-center text-xl font-light py-3">We provide high quality product. We make sure to our customer our product is good and fresh</p>
                  </div>
              </div>
          </section>
