--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
 
      <main>
         <!-- Service section -->
-         <section class="my-36 max-w-7xl mx-auto">
-            <h1 class="text-4xl font-semibold text-primary-color mb-12 mx-4">Service</h1>
+         <section class="my-12 md:my-36 max-w-7xl mx-auto">
+            <h1 class="text-2xl md:text-4xl font-semibold text-primary-color mb-8 md:mb-12 mx-4">Service</h1>
             <!-- Service cards  -->
              <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-3 gap-6 mx-4">
                 <!-- card 1 -->
