--- a/index.html
+++ b/index.html
@@ -89,29 +89,105 @@
          </section>
          
          <!-- Product section -->
-          <section class="max-w-7xl mx-auto mb-24">
-            <h1 class="text-2xl md:text-4xl font-semibold text-primary-color mb-8 md:mb-12 mx-4">Popular Product</h1>
-            <!-- product boxs -->
-            <div class="flex gap-x-6">
-                <!-- big box  -->
-<div class="lg:w-4/12 bg-gradient-to-tl from-slate-50 to-primary-color">
-    <div class="bg-[url(./image/vegetable-offer.png)] bg-no-repeat bg-right-bottom   pt-14 px-8 pb-48">
-        <h2 class="text-secondary-color text-3xl font-medium">30% off</h2>
-        <p class="py-5">Discover a world of treats, toys, and essentials handpicked for</p>
-        <button class="bg-white px-8 py-3 rounded-lg font-medium text-xl">Buy Now</button>
+          <section class="bg-secondary-color">
+<div class="max-w-7xl mx-auto py-36 ">
+    <h1 class="text-2xl md:text-4xl font-semibold text-primary-color mb-8 md:mb-12 mx-4">Popular Product</h1>
+    <!-- product boxs -->
+    <div class="flex gap-x-6 md:flex-row flex-col mx-4">
+        <!-- big box  -->
+    <div class="lg:w-4/12 md:w-5/12 lg:pr-3 my-6 bg-gradient-to-tl from-slate-50 to-[#53DB3A] rounded-xl">
+        <div class="bg-[url(./image/vegetable-offer.png)] bg-no-repeat bg-right-bottom px-8 pt-14 pb-44">
+            <h2 class="text-secondary-color text-3xl font-medium">30% off</h2>
+            <p class="py-5">Discover a world of treats, toys, and essentials handpicked for</p>
+            <button class="bg-white px-8 py-3 rounded-lg font-medium text-xl">Buy Now</button>
+        </div>
     </div>
-</div>
-                <!-- small boxs  -->
-                <div class="grid grid-cols-3 flex-1">
-                    <!-- box  -->
-                    <div class="bg-secondary-color">
-                        <img src="./image/onion.png" alt="">
-                        <span class="rating">4.5</span>
-                        <h3>Onion 1KG</h3>
-                        <h4>$39.99</h4>
-                    </div>
+        <!-- small boxs  -->
+        <div class="grid lg:grid-cols-3 grid-cols-2 flex-1 gap-6 my-6">
+            <!-- box  -->
+            <div class="bg-white flex items-center rounded-xl">
+                <div class=""><img class="bg-secondary-color m-4 rounded-xl" src="./image/onion.png" alt=""></div>
+                <div class="">
+                    <span class=""><i class="fa-solid fa-star text-[#FFC107] mr-3"></i>4.5</span>
+                <h3 class="text-xl font-medium">Onion 1KG</h3>
+                <h4 class="font-medium"><i class="fa-solid fa-dollar-sign"></i>39.99</h4>
                 </div>
             </div>
+            <!-- box  -->
+            <div class="bg-white flex items-center rounded-xl">
+                <div class=""><img class="bg-secondary-color m-4 rounded-xl" src="./image/onion.png" alt=""></div>
+                <div class="">
+                    <span class=""><i class="fa-solid fa-star text-[#FFC107] mr-3"></i>4.5</span>
+                <h3 class="text-xl font-medium">Onion 1KG</h3>
+                <h4 class="font-medium"><i class="fa-solid fa-dollar-sign"></i>39.99</h4>
+                </div>
+            </div>
+            <!-- box  -->
+            <div class="bg-white flex items-center rounded-xl">
+                <div class=""><img class="bg-secondary-color m-4 rounded-xl" src="./image/onion.png" alt=""></div>
+                <div class="">
+                    <span class=""><i class="fa-solid fa-star text-[#FFC107] mr-3"></i>4.5</span>
+                <h3 class="text-xl font-medium">Onion 1KG</h3>
+                <h4 class="font-medium"><i class="fa-solid fa-dollar-sign"></i>39.99</h4>
+                </div>
+            </div>
+            <!-- box  -->
+            <div class="bg-white flex items-center rounded-xl">
+                <div class=""><img class="bg-secondary-color m-4 rounded-xl" src="./image/onion.png" alt=""></div>
+                <div class="">
+                    <span class=""><i class="fa-solid fa-star text-[#FFC107] mr-3"></i>4.5</span>
+                <h3 class="text-xl font-medium">Onion 1KG</h3>
+                <h4 class="font-medium"><i class="fa-solid fa-dollar-sign"></i>39.99</h4>
+                </div>
+            </div>
+            <!-- box  -->
+            <div class="bg-white flex items-center rounded-xl">
+                <div class=""><img class="bg-secondary-color m-4 rounded-xl" src="./image/onion.png" alt=""></div>
+                <div class="">
+                    <span class=""><i class="fa-solid fa-star text-[#FFC107] mr-3"></i>4.5</span>
+                <h3 class="text-xl font-medium">Onion 1KG</h3>
+                <h4 class="font-medium"><i class="fa-solid fa-dollar-sign"></i>39.99</h4>
+                </div>
+            </div>
+            <!-- box  -->
+            <div class="bg-white flex items-center rounded-xl">
+                <div class=""><img class="bg-secondary-color m-4 rounded-xl" src="./image/onion.png" alt=""></div>
+                <div class="">
+                    <span class=""><i class="fa-solid fa-star text-[#FFC107] mr-3"></i>4.5</span>
+                <h3 class="text-xl font-medium">Onion 1KG</h3>
+                <h4 class="font-medium"><i class="fa-solid fa-dollar-sign"></i>39.99</h4>
+                </div>
+            </div>
+            <!-- box  -->
+            <div class="bg-white flex items-center rounded-xl">
+                <div class=""><img class="bg-secondary-color m-4 rounded-xl" src="./image/onion.png" alt=""></div>
+                <div class="">
+                    <span class=""><i class="fa-solid fa-star text-[#FFC107] mr-3"></i>4.5</span>
+                <h3 class="text-xl font-medium">Onion 1KG</h3>
+                <h4 class="font-medium"><i class="fa-solid fa-dollar-sign"></i>39.99</h4>
+                </div>
+            </div>
+            <!-- box  -->
+            <div class="bg-white flex items-center rounded-xl">
+                <div class=""><img class="bg-secondary-color m-4 rounded-xl" src="./image/onion.png" alt=""></div>
+                <div class="">
+                    <span class=""><i class="fa-solid fa-star text-[#FFC107] mr-3"></i>4.5</span>
+                <h3 class="text-xl font-medium">Onion 1KG</h3>
+                <h4 class="font-medium"><i class="fa-solid fa-dollar-sign"></i>39.99</h4>
+                </div>
+            </div>
+            <!-- box  -->
+            <div class="bg-white flex items-center rounded-xl">
+                <div class=""><img class="bg-secondary-color m-4 rounded-xl" src="./image/onion.png" alt=""></div>
+                <div class="">
+                    <span class=""><i class="fa-solid fa-star text-[#FFC107] mr-3"></i>4.5</span>
+                <h3 class="text-xl font-medium">Onion 1KG</h3>
+                <h4 class="font-medium"><i class="fa-solid fa-dollar-sign"></i>39.99</h4>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
           </section>
      </main>
     
