--- a/index.html
+++ b/index.html
@@ -90,8 +90,8 @@
          
          <!-- Product section -->
           <section class="bg-secondary-color">
-<div class="max-w-7xl mx-auto py-36 ">
-    <h1 class="text-2xl md:text-4xl font-semibold text-primary-color mb-8 md:mb-12 mx-4">Popular Product</h1>
+<div class="max-w-7xl mx-auto py-12 md:py-20 lg:py-36 ">
+    <h1 class="text-2xl md:text-4xl font-semibold text-primary-color mb-2 lg:mb-6  mx-4">Popular Product</h1>
     <!-- product boxs -->
     <div class="flex gap-x-6 md:flex-row flex-col mx-4">
         <!-- big box  -->
@@ -103,88 +103,90 @@
         </div>
     </div>
         <!-- small boxs  -->
-        <div class="grid lg:grid-cols-3 grid-cols-2 flex-1 gap-6 my-6">
+        <div class="grid lg:grid-cols-3 grid-cols-2 flex-1 gap-3 lg:gap-6 my-6">
+
             <!-- box  -->
             <div class="bg-white flex items-center rounded-xl">
                 <div class=""><img class="bg-secondary-color m-4 rounded-xl" src="./image/onion.png" alt=""></div>
                 <div class="">
-                    <span class=""><i class="fa-solid fa-star text-[#FFC107] mr-3"></i>4.5</span>
-                <h3 class="text-xl font-medium">Onion 1KG</h3>
-                <h4 class="font-medium"><i class="fa-solid fa-dollar-sign"></i>39.99</h4>
+                    <span class=" text-xs lg:text-base"><i class="fa-solid fa-star text-[#FFC107] mr-3"></i>4.5</span>
+                <h3 class="text-sm lg:text-xl font-medium">Onion 1KG</h3>
+                <h4 class="font-medium text-xs lg:text-base"><i class="fa-solid fa-dollar-sign"></i>39.99</h4>
+                </div>
+            </div>
+            <!-- box  -->
+            <div class="bg-white flex items-center rounded-xl">
+                <div class=""><img class="bg-secondary-color m-4 rounded-xl" src="./image/tomato.png" alt=""></div>
+                <div class="">
+                    <span class=" text-xs lg:text-base"><i class="fa-solid fa-star text-[#FFC107] mr-3"></i>4.5</span>
+                <h3 class="text-sm lg:text-xl font-medium">Tomato 500 g</h3>
+                <h4 class="font-medium text-xs lg:text-base"><i class="fa-solid fa-dollar-sign"></i>39.99</h4>
+                </div>
+            </div>
+            <!-- box  -->
+            <div class="bg-white flex items-center rounded-xl">
+                <div class=""><img class="bg-secondary-color m-4 rounded-xl" src="./image/potato.png" alt=""></div>
+                <div class="">
+                    <span class=" text-xs lg:text-base"><i class="fa-solid fa-star text-[#FFC107] mr-3"></i>4.5</span>
+                <h3 class="text-sm lg:text-xl font-medium">Potato 1KG</h3>
+                <h4 class="font-medium text-xs lg:text-base"><i class="fa-solid fa-dollar-sign"></i>39.99</h4>
+                </div>
+            </div>
+            <!-- box  -->
+            <div class="bg-white flex items-center rounded-xl">
+                <div class=""><img class="bg-secondary-color m-4 rounded-xl" src="./image/tomato.png" alt=""></div>
+                <div class="">
+                    <span class=" text-xs lg:text-base"><i class="fa-solid fa-star text-[#FFC107] mr-3"></i>4.5</span>
+                <h3 class="text-sm lg:text-xl font-medium">Tomato 500 g</h3>
+                <h4 class="font-medium text-xs lg:text-base"><i class="fa-solid fa-dollar-sign"></i>39.99</h4>
                 </div>
             </div>
             <!-- box  -->
             <div class="bg-white flex items-center rounded-xl">
                 <div class=""><img class="bg-secondary-color m-4 rounded-xl" src="./image/onion.png" alt=""></div>
                 <div class="">
-                    <span class=""><i class="fa-solid fa-star text-[#FFC107] mr-3"></i>4.5</span>
-                <h3 class="text-xl font-medium">Onion 1KG</h3>
-                <h4 class="font-medium"><i class="fa-solid fa-dollar-sign"></i>39.99</h4>
+                    <span class=" text-xs lg:text-base"><i class="fa-solid fa-star text-[#FFC107] mr-3"></i>4.5</span>
+                <h3 class="text-sm lg:text-xl font-medium">Onion 1KG</h3>
+                <h4 class="font-medium text-xs lg:text-base"><i class="fa-solid fa-dollar-sign"></i>39.99</h4>
+                </div>
+            </div>
+            <!-- box  -->
+            <div class="bg-white flex items-center rounded-xl">
+                <div class=""><img class="bg-secondary-color m-4 rounded-xl" src="./image/tomato.png" alt=""></div>
+                <div class="">
+                    <span class=" text-xs lg:text-base"><i class="fa-solid fa-star text-[#FFC107] mr-3"></i>4.5</span>
+                <h3 class="text-sm lg:text-xl font-medium">Tomato 500 g</h3>
+                <h4 class="font-medium text-xs lg:text-base"><i class="fa-solid fa-dollar-sign"></i>39.99</h4>
                 </div>
             </div>
             <!-- box  -->
             <div class="bg-white flex items-center rounded-xl">
                 <div class=""><img class="bg-secondary-color m-4 rounded-xl" src="./image/onion.png" alt=""></div>
                 <div class="">
-                    <span class=""><i class="fa-solid fa-star text-[#FFC107] mr-3"></i>4.5</span>
-                <h3 class="text-xl font-medium">Onion 1KG</h3>
-                <h4 class="font-medium"><i class="fa-solid fa-dollar-sign"></i>39.99</h4>
+                    <span class=" text-xs lg:text-base"><i class="fa-solid fa-star text-[#FFC107] mr-3"></i>4.5</span>
+                <h3 class="text-sm lg:text-xl font-medium">Onion 1KG</h3>
+                <h4 class="font-medium text-xs lg:text-base"><i class="fa-solid fa-dollar-sign"></i>39.99</h4>
                 </div>
             </div>
             <!-- box  -->
             <div class="bg-white flex items-center rounded-xl">
-                <div class=""><img class="bg-secondary-color m-4 rounded-xl" src="./image/onion.png" alt=""></div>
+                <div class=""><img class="bg-secondary-color m-4 rounded-xl" src="./image/potato.png" alt=""></div>
                 <div class="">
-                    <span class=""><i class="fa-solid fa-star text-[#FFC107] mr-3"></i>4.5</span>
-                <h3 class="text-xl font-medium">Onion 1KG</h3>
-                <h4 class="font-medium"><i class="fa-solid fa-dollar-sign"></i>39.99</h4>
+                    <span class=" text-xs lg:text-base"><i class="fa-solid fa-star text-[#FFC107] mr-3"></i>4.5</span>
+                <h3 class="text-sm lg:text-xl font-medium">Potato 1KG</h3>
+                <h4 class="font-medium text-xs lg:text-base"><i class="fa-solid fa-dollar-sign"></i>39.99</h4>
                 </div>
             </div>
             <!-- box  -->
             <div class="bg-white flex items-center rounded-xl">
-                <div class=""><img class="bg-secondary-color m-4 rounded-xl" src="./image/onion.png" alt=""></div>
+                <div class=""><img class="bg-secondary-color m-4 rounded-xl" src="./image/potato.png" alt=""></div>
                 <div class="">
-                    <span class=""><i class="fa-solid fa-star text-[#FFC107] mr-3"></i>4.5</span>
-                <h3 class="text-xl font-medium">Onion 1KG</h3>
-                <h4 class="font-medium"><i class="fa-solid fa-dollar-sign"></i>39.99</h4>
+                    <span class=" text-xs lg:text-base"><i class="fa-solid fa-star text-[#FFC107] mr-3"></i>4.5</span>
+                <h3 class="text-sm lg:text-xl font-medium">Potato 1KG</h3>
+                <h4 class="font-medium text-xs lg:text-base"><i class="fa-solid fa-dollar-sign"></i>39.99</h4>
                 </div>
             </div>
-            <!-- box  -->
-            <div class="bg-white flex items-center rounded-xl">
-                <div class=""><img class="bg-secondary-color m-4 rounded-xl" src="./image/onion.png" alt=""></div>
-                <div class="">
-                    <span class=""><i class="fa-solid fa-star text-[#FFC107] mr-3"></i>4.5</span>
-                <h3 class="text-xl font-medium">Onion 1KG</h3>
-                <h4 class="font-medium"><i class="fa-solid fa-dollar-sign"></i>39.99</h4>
-                </div>
-            </div>
-            <!-- box  -->
-            <div class="bg-white flex items-center rounded-xl">
-                <div class=""><img class="bg-secondary-color m-4 rounded-xl" src="./image/onion.png" alt=""></div>
-                <div class="">
-                    <span class=""><i class="fa-solid fa-star text-[#FFC107] mr-3"></i>4.5</span>
-                <h3 class="text-xl font-medium">Onion 1KG</h3>
-                <h4 class="font-medium"><i class="fa-solid fa-dollar-sign"></i>39.99</h4>
-                </div>
-            </div>
-            <!-- box  -->
-            <div class="bg-white flex items-center rounded-xl">
-                <div class=""><img class="bg-secondary-color m-4 rounded-xl" src="./image/onion.png" alt=""></div>
-                <div class="">
-                    <span class=""><i class="fa-solid fa-star text-[#FFC107] mr-3"></i>4.5</span>
-                <h3 class="text-xl font-medium">Onion 1KG</h3>
-                <h4 class="font-medium"><i class="fa-solid fa-dollar-sign"></i>39.99</h4>
-                </div>
-            </div>
-            <!-- box  -->
-            <div class="bg-white flex items-center rounded-xl">
-                <div class=""><img class="bg-secondary-color m-4 rounded-xl" src="./image/onion.png" alt=""></div>
-                <div class="">
-                    <span class=""><i class="fa-solid fa-star text-[#FFC107] mr-3"></i>4.5</span>
-                <h3 class="text-xl font-medium">Onion 1KG</h3>
-                <h4 class="font-medium"><i class="fa-solid fa-dollar-sign"></i>39.99</h4>
-                </div>
-            </div>
+
         </div>
     </div>
 </div>
