offer section design done

--- a/index.html
+++ b/index.html
@@ -90,107 +90,137 @@
          
          <!-- Product section -->
           <section class="bg-secondary-color">
-<div class="max-w-7xl mx-auto py-12 md:py-20 lg:py-36 ">
-    <h1 class="text-2xl md:text-4xl font-semibold text-primary-color mb-2 lg:mb-6  mx-4">Popular Product</h1>
-    <!-- product boxs -->
-    <div class="flex gap-x-6 md:flex-row flex-col mx-4">
-        <!-- big box  -->
-    <div class="lg:w-4/12 md:w-5/12 lg:pr-3 my-6 bg-gradient-to-tl from-slate-50 to-[#53DB3A] rounded-xl">
-        <div class="bg-[url(./image/vegetable-offer.png)] bg-no-repeat bg-right-bottom px-8 pt-14 pb-44">
-            <h2 class="text-secondary-color text-3xl font-medium">30% off</h2>
-            <p class="py-5">Discover a world of treats, toys, and essentials handpicked for</p>
-            <button class="bg-white px-8 py-3 rounded-lg font-medium text-xl">Buy Now</button>
-        </div>
-    </div>
-        <!-- small boxs  -->
-        <div class="grid lg:grid-cols-3 grid-cols-2 flex-1 gap-3 lg:gap-6 my-6">
+            <div class="max-w-7xl mx-auto py-12 md:py-20 lg:py-36 ">
+                <h1 class="text-2xl md:text-4xl font-semibold text-primary-color mb-2 lg:mb-6  mx-4">Popular Product</h1>
+                <!-- product boxs -->
+                <div class="flex gap-x-6 md:flex-row flex-col mx-4">
+                    <!-- big box  -->
+                <div class="lg:w-4/12 md:w-5/12 lg:pr-3 my-6 bg-gradient-to-tl from-slate-50 to-[#53DB3A] rounded-xl">
+                    <div class="bg-[url(./image/vegetable-offer.png)] bg-no-repeat bg-right-bottom px-8 pt-14 pb-44">
+                        <h2 class="text-secondary-color text-3xl font-medium">30% off</h2>
+                        <p class="py-5">Discover a world of treats, toys, and essentials handpicked for</p>
+                        <button class="bg-white px-8 py-3 rounded-lg font-medium text-xl">Buy Now</button>
+                    </div>
+                </div>
+                    <!-- small boxs  -->
+                    <div class="grid lg:grid-cols-3 grid-cols-2 flex-1 gap-3 lg:gap-6 my-6">
 
-            <!-- box  -->
-            <div class="bg-white flex items-center rounded-xl">
-                <div class=""><img class="bg-secondary-color m-4 rounded-xl" src="./image/onion.png" alt=""></div>
-                <div class="">
-                    <span class=" text-xs lg:text-base"><i class="fa-solid fa-star text-[#FFC107] mr-3"></i>4.5</span>
-                <h3 class="text-sm lg:text-xl font-medium">Onion 1KG</h3>
-                <h4 class="font-medium text-xs lg:text-base"><i class="fa-solid fa-dollar-sign"></i>39.99</h4>
-                </div>
-            </div>
-            <!-- box  -->
-            <div class="bg-white flex items-center rounded-xl">
-                <div class=""><img class="bg-secondary-color m-4 rounded-xl" src="./image/tomato.png" alt=""></div>
-                <div class="">
-                    <span class=" text-xs lg:text-base"><i class="fa-solid fa-star text-[#FFC107] mr-3"></i>4.5</span>
-                <h3 class="text-sm lg:text-xl font-medium">Tomato 500 g</h3>
-                <h4 class="font-medium text-xs lg:text-base"><i class="fa-solid fa-dollar-sign"></i>39.99</h4>
-                </div>
-            </div>
-            <!-- box  -->
-            <div class="bg-white flex items-center rounded-xl">
-                <div class=""><img class="bg-secondary-color m-4 rounded-xl" src="./image/potato.png" alt=""></div>
-                <div class="">
-                    <span class=" text-xs lg:text-base"><i class="fa-solid fa-star text-[#FFC107] mr-3"></i>4.5</span>
-                <h3 class="text-sm lg:text-xl font-medium">Potato 1KG</h3>
-                <h4 class="font-medium text-xs lg:text-base"><i class="fa-solid fa-dollar-sign"></i>39.99</h4>
-                </div>
-            </div>
-            <!-- box  -->
-            <div class="bg-white flex items-center rounded-xl">
-                <div class=""><img class="bg-secondary-color m-4 rounded-xl" src="./image/tomato.png" alt=""></div>
-                <div class="">
-                    <span class=" text-xs lg:text-base"><i class="fa-solid fa-star text-[#FFC107] mr-3"></i>4.5</span>
-                <h3 class="text-sm lg:text-xl font-medium">Tomato 500 g</h3>
-                <h4 class="font-medium text-xs lg:text-base"><i class="fa-solid fa-dollar-sign"></i>39.99</h4>
-                </div>
-            </div>
-            <!-- box  -->
-            <div class="bg-white flex items-center rounded-xl">
-                <div class=""><img class="bg-secondary-color m-4 rounded-xl" src="./image/onion.png" alt=""></div>
-                <div class="">
-                    <span class=" text-xs lg:text-base"><i class="fa-solid fa-star text-[#FFC107] mr-3"></i>4.5</span>
-                <h3 class="text-sm lg:text-xl font-medium">Onion 1KG</h3>
-                <h4 class="font-medium text-xs lg:text-base"><i class="fa-solid fa-dollar-sign"></i>39.99</h4>
-                </div>
-            </div>
-            <!-- box  -->
-            <div class="bg-white flex items-center rounded-xl">
-                <div class=""><img class="bg-secondary-color m-4 rounded-xl" src="./image/tomato.png" alt=""></div>
-                <div class="">
-                    <span class=" text-xs lg:text-base"><i class="fa-solid fa-star text-[#FFC107] mr-3"></i>4.5</span>
-                <h3 class="text-sm lg:text-xl font-medium">Tomato 500 g</h3>
-                <h4 class="font-medium text-xs lg:text-base"><i class="fa-solid fa-dollar-sign"></i>39.99</h4>
-                </div>
-            </div>
-            <!-- box  -->
-            <div class="bg-white flex items-center rounded-xl">
-                <div class=""><img class="bg-secondary-color m-4 rounded-xl" src="./image/onion.png" alt=""></div>
-                <div class="">
-                    <span class=" text-xs lg:text-base"><i class="fa-solid fa-star text-[#FFC107] mr-3"></i>4.5</span>
-                <h3 class="text-sm lg:text-xl font-medium">Onion 1KG</h3>
-                <h4 class="font-medium text-xs lg:text-base"><i class="fa-solid fa-dollar-sign"></i>39.99</h4>
-                </div>
-            </div>
-            <!-- box  -->
-            <div class="bg-white flex items-center rounded-xl">
-                <div class=""><img class="bg-secondary-color m-4 rounded-xl" src="./image/potato.png" alt=""></div>
-                <div class="">
-                    <span class=" text-xs lg:text-base"><i class="fa-solid fa-star text-[#FFC107] mr-3"></i>4.5</span>
-                <h3 class="text-sm lg:text-xl font-medium">Potato 1KG</h3>
-                <h4 class="font-medium text-xs lg:text-base"><i class="fa-solid fa-dollar-sign"></i>39.99</h4>
-                </div>
-            </div>
-            <!-- box  -->
-            <div class="bg-white flex items-center rounded-xl">
-                <div class=""><img class="bg-secondary-color m-4 rounded-xl" src="./image/potato.png" alt=""></div>
-                <div class="">
-                    <span class=" text-xs lg:text-base"><i class="fa-solid fa-star text-[#FFC107] mr-3"></i>4.5</span>
-                <h3 class="text-sm lg:text-xl font-medium">Potato 1KG</h3>
-                <h4 class="font-medium text-xs lg:text-base"><i class="fa-solid fa-dollar-sign"></i>39.99</h4>
-                </div>
-            </div>
+                        <!-- box  -->
+                        <div class="bg-white flex items-center rounded-xl">
+                            <div class=""><img class="bg-secondary-color m-4 rounded-xl" src="./image/onion.png" alt=""></div>
+                            <div class="">
+                                <span class=" text-xs lg:text-base"><i class="fa-solid fa-star text-[#FFC107] mr-3"></i>4.5</span>
+                            <h3 class="text-sm lg:text-xl font-medium">Onion 1KG</h3>
+                            <h4 class="font-medium text-xs lg:text-base"><i class="fa-solid fa-dollar-sign"></i>39.99</h4>
+                            </div>
+                        </div>
+                        <!-- box  -->
+                        <div class="bg-white flex items-center rounded-xl">
+                            <div class=""><img class="bg-secondary-color m-4 rounded-xl" src="./image/tomato.png" alt=""></div>
+                            <div class="">
+                                <span class=" text-xs lg:text-base"><i class="fa-solid fa-star text-[#FFC107] mr-3"></i>4.5</span>
+                            <h3 class="text-sm lg:text-xl font-medium">Tomato 500 g</h3>
+                            <h4 class="font-medium text-xs lg:text-base"><i class="fa-solid fa-dollar-sign"></i>39.99</h4>
+                            </div>
+                        </div>
+                        <!-- box  -->
+                        <div class="bg-white flex items-center rounded-xl">
+                            <div class=""><img class="bg-secondary-color m-4 rounded-xl" src="./image/potato.png" alt=""></div>
+                            <div class="">
+                                <span class=" text-xs lg:text-base"><i class="fa-solid fa-star text-[#FFC107] mr-3"></i>4.5</span>
+                            <h3 class="text-sm lg:text-xl font-medium">Potato 1KG</h3>
+                            <h4 class="font-medium text-xs lg:text-base"><i class="fa-solid fa-dollar-sign"></i>39.99</h4>
+                            </div>
+                        </div>
+                        <!-- box  -->
+                        <div class="bg-white flex items-center rounded-xl">
+                            <div class=""><img class="bg-secondary-color m-4 rounded-xl" src="./image/tomato.png" alt=""></div>
+                            <div class="">
+                                <span class=" text-xs lg:text-base"><i class="fa-solid fa-star text-[#FFC107] mr-3"></i>4.5</span>
+                            <h3 class="text-sm lg:text-xl font-medium">Tomato 500 g</h3>
+                            <h4 class="font-medium text-xs lg:text-base"><i class="fa-solid fa-dollar-sign"></i>39.99</h4>
+                            </div>
+                        </div>
+                        <!-- box  -->
+                        <div class="bg-white flex items-center rounded-xl">
+                            <div class=""><img class="bg-secondary-color m-4 rounded-xl" src="./image/onion.png" alt=""></div>
+                            <div class="">
+                                <span class=" text-xs lg:text-base"><i class="fa-solid fa-star text-[#FFC107] mr-3"></i>4.5</span>
+                            <h3 class="text-sm lg:text-xl font-medium">Onion 1KG</h3>
+                            <h4 class="font-medium text-xs lg:text-base"><i class="fa-solid fa-dollar-sign"></i>39.99</h4>
+                            </div>
+                        </div>
+                        <!-- box  -->
+                        <div class="bg-white flex items-center rounded-xl">
+                            <div class=""><img class="bg-secondary-color m-4 rounded-xl" src="./image/tomato.png" alt=""></div>
+                            <div class="">
+                                <span class=" text-xs lg:text-base"><i class="fa-solid fa-star text-[#FFC107] mr-3"></i>4.5</span>
+                            <h3 class="text-sm lg:text-xl font-medium">Tomato 500 g</h3>
+                            <h4 class="font-medium text-xs lg:text-base"><i class="fa-solid fa-dollar-sign"></i>39.99</h4>
+                            </div>
+                        </div>
+                        <!-- box  -->
+                        <div class="bg-white flex items-center rounded-xl">
+                            <div class=""><img class="bg-secondary-color m-4 rounded-xl" src="./image/onion.png" alt=""></div>
+                            <div class="">
+                                <span class=" text-xs lg:text-base"><i class="fa-solid fa-star text-[#FFC107] mr-3"></i>4.5</span>
+                            <h3 class="text-sm lg:text-xl font-medium">Onion 1KG</h3>
+                            <h4 class="font-medium text-xs lg:text-base"><i class="fa-solid fa-dollar-sign"></i>39.99</h4>
+                            </div>
+                        </div>
+                        <!-- box  -->
+                        <div class="bg-white flex items-center rounded-xl">
+                            <div class=""><img class="bg-secondary-color m-4 rounded-xl" src="./image/potato.png" alt=""></div>
+                            <div class="">
+                                <span class=" text-xs lg:text-base"><i class="fa-solid fa-star text-[#FFC107] mr-3"></i>4.5</span>
+                            <h3 class="text-sm lg:text-xl font-medium">Potato 1KG</h3>
+                            <h4 class="font-medium text-xs lg:text-base"><i class="fa-solid fa-dollar-sign"></i>39.99</h4>
+                            </div>
+                        </div>
+                        <!-- box  -->
+                        <div class="bg-white flex items-center rounded-xl">
+                            <div class=""><img class="bg-secondary-color m-4 rounded-xl" src="./image/potato.png" alt=""></div>
+                            <div class="">
+                                <span class=" text-xs lg:text-base"><i class="fa-solid fa-star text-[#FFC107] mr-3"></i>4.5</span>
+                            <h3 class="text-sm lg:text-xl font-medium">Potato 1KG</h3>
+                            <h4 class="font-medium text-xs lg:text-base"><i class="fa-solid fa-dollar-sign"></i>39.99</h4>
+                            </div>
+                        </div>
 
-        </div>
-    </div>
-</div>
+                    </div>
+                </div>
+            </div>
           </section>
+
+          <!-- Offer section  -->
+           <section class="max-w-7xl mx-auto mb-5">
+            <h1 class="text-2xl md:text-4xl font-semibold text-primary-color mb-2 lg:mb-6  mx-4">Arrival & Offer</h1>
+            <!-- offer box  -->
+            <div class="flex gap-5 flex-col lg:flex-row">
+                <!-- box left -->
+                <div class="flex items-center bg-[#115414] rounded-3xl px-4 lg:px-10">
+                    <!-- box content  -->
+                     <div class="w-3/5 mt-12">
+                        <img src="./image/dawat-logo.png" alt="">
+                        <button class="text-sm lg:text-2xl bg-[#63B76D] text-white px-4 lg:px-10 py-2 lg:py-4 my-6 rounded-xl">Cook Exotic Dishes</button>
+                        <h2 class="text-xl lg:text-4xl text-white font-normal pb-12">UP to <span class="font-bold">20% OFF</span></h2>
+                     </div>
+                     <!-- box image -->
+                      <div class="mt-8 justify-end"><img class="" src="./image/dawat-mock-up.png" alt=""></div>
+                </div>
+                <!-- box left -->
+                <div class="flex bg-[#115414] rounded-3xl">
+                    <!-- box content  -->
+                     <div class="">
+                        <img src="./image/dawat-logo.png" alt="">
+                        <button>Cook Exotic Dishes</button>
+                        <h2>UP to <span>20% OFF</span></h2>
+                     </div>
+                     <!-- box image -->
+                      <div class=""><img src="./image/dawat-mock-up.png" alt=""></div>
+                </div>
+            </div>
+           </section>
      </main>
     
 </body>
