responsive offer section done

--- a/index.html
+++ b/index.html
@@ -193,32 +193,33 @@
           </section>
 
           <!-- Offer section  -->
-           <section class="max-w-7xl mx-auto mb-5">
-            <h1 class="text-2xl md:text-4xl font-semibold text-primary-color mb-2 lg:mb-6  mx-4">Arrival & Offer</h1>
+           <section class="max-w-7xl mx-auto my-12 lg:my-36">
+            <h1 class="text-2xl md:text-4xl font-semibold text-primary-color mb-8 lg:mb-12  mx-4">Arrival & Offer</h1>
             <!-- offer box  -->
-            <div class="flex gap-5 flex-col lg:flex-row">
+            <div class="flex gap-5 flex-col md:flex-row lg:mb-4 mx-4">
                 <!-- box left -->
-                <div class="flex items-center bg-[#115414] rounded-3xl px-4 lg:px-10">
+                <div class="flex items-end bg-[#115414] rounded-2xl  lg:w-7/12 md:w-3/6 w-full">
                     <!-- box content  -->
-                     <div class="w-3/5 mt-12">
-                        <img src="./image/dawat-logo.png" alt="">
-                        <button class="text-sm lg:text-2xl bg-[#63B76D] text-white px-4 lg:px-10 py-2 lg:py-4 my-6 rounded-xl">Cook Exotic Dishes</button>
-                        <h2 class="text-xl lg:text-4xl text-white font-normal pb-12">UP to <span class="font-bold">20% OFF</span></h2>
+                     <div class="w-3/5 lg:w-3/5 my-6 lg:my-11 md:my-6 ml-5 lg:ml-10 md:ml-5">
+                        <img class="lg:my-1" src="./image/dawat-logo.png" alt="">
+                        <button class="text-sm md:text-lg lg:text-2xl bg-[#63B76D] text-white rounded-xl my-4 md:my-7 lg:px-10 px-4 lg:py-4 py-2">Cook Exotic Dishes</button>
+                        <h2 class="text-xl lg:text-4xl text-white font-normal">UP to <span class="font-bold">20% OFF</span></h2>
                      </div>
                      <!-- box image -->
-                      <div class="mt-8 justify-end"><img class="" src="./image/dawat-mock-up.png" alt=""></div>
+                      <div class="mt-8 md:mt-2"><img class="" src="./image/dawat-mock-up.png" alt=""></div>
                 </div>
-                <!-- box left -->
-                <div class="flex bg-[#115414] rounded-3xl">
+                <!-- box right -->
+                <div class="flex items-end bg-[#102861] rounded-2xl  lg:w-5/12 md:w-3/6 w-full">
                     <!-- box content  -->
-                     <div class="">
-                        <img src="./image/dawat-logo.png" alt="">
-                        <button>Cook Exotic Dishes</button>
-                        <h2>UP to <span>20% OFF</span></h2>
+                     <div class="w-3/5 lg:w-3/5 my-2 lg:my-5 md:my-3 ml-5 lg:ml-7 md:ml-5">
+                        <img class="lg:my-1" src="./image/india-gate-logo.png" alt="">
+                        <button class="text-sm md:text-lg lg:text-2xl bg-[#2A4D97] text-white rounded-xl my-4 md:my-7 lg:px-10 px-4 lg:py-4 py-2">World’s No.1 Rice</button>
+                        <h2 class="text-xl lg:text-4xl text-white font-normal mb-4">UP to <span class="font-bold">40% OFF</span></h2>
                      </div>
                      <!-- box image -->
-                      <div class=""><img src="./image/dawat-mock-up.png" alt=""></div>
+                      <div class="mt-8 md:mt-2 pr-3"><img class="" src="./image/india-gate-mock-up.png" alt=""></div>
                 </div>
+
             </div>
            </section>
      </main>
