grocery section done

--- a/index.html
+++ b/index.html
@@ -223,6 +223,23 @@
             </div>
            </section>
      </main>
+
+     <footer>
+        <!-- grocery section  -->
+         <section class=" mx-4">
+            <div class="max-w-7xl mx-auto px-4 py-8 bg-secondary-color rounded-3xl flex flex-col lg:flex-row items-center">
+                <!-- image area  -->
+                <div class="lg:w-6/12 my-14"><img class="mx-auto" src="./image/vegetable-busket.png" alt=""></div>
+                <!-- content area  -->
+                <div class="lg:w-6/12 text-center lg:text-left xl:pl-6">
+                    <h1 class="text-4xl font-semibold">Get Grocery News!</h1>
+                    <p class="text-xl mt-5">Exclusive training tips, ticks, product deals and more.</p>
+                    <input class="block w-full xl:w-3/5 lg:w-4/5 p-5 my-9 rounded-lg" type="email" placeholder="Enter Email....">
+                    <button class="bg-primary-color text-white px-8 py-3 rounded-lg font-medium text-xl">Subscribe</button>
+                </div>
+            </div>
+         </section>
+     </footer>
     
 </body>
 </html>
