footer section done

--- a/index.html
+++ b/index.html
@@ -224,7 +224,7 @@
            </section>
      </main>
 
-     <footer>
+     <footer class="bg-primary-color">
         <!-- grocery section  -->
          <section class=" mx-4">
             <div class="max-w-7xl mx-auto px-4 py-8 bg-secondary-color rounded-3xl flex flex-col lg:flex-row items-center">
@@ -239,6 +239,37 @@
                 </div>
             </div>
          </section>
+
+         <!-- footer section  -->
+          <section class="max-w-7xl mx-auto grid grid-cols-4 px-2 pb-36">
+            <!-- content area  -->
+             <div class="">
+                <!-- logo  -->
+                 <div><img src="./image/logo-footer.png" alt=""></div>
+                 <p class="text-xl text-white mt-3">Discover a world of treats, toys, and essentials handpicked for your furry friends</p>
+             </div>
+             <!-- navigation area  -->
+              <div class="col-span-2 text-center text-xl text-secondary-color">
+                <nav>
+                    <ul>
+                        <li><a href="#">Product</a></li>
+                        <li class="my-8"><a href="#">Service</a></li>
+                        <li><a href="#">Contact us</a></li>
+                    </ul>
+                </nav>
+              </div>
+              <!-- link area  -->
+               <div class="text-right text-secondary-color flex flex-col justify-end">
+                <h3 class="mr-20">Follow Us</h3>
+                <!-- link  -->
+                 <div class="flex justify-end gap-6 text-lg mt-2">
+                    <a href="#"><i class="fa-brands fa-facebook"></i></a>
+                    <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                    <a href="#"><i class="fa-brands fa-linkedin"></i></a>
+                    <a href="#"><i class="fa-brands fa-youtube"></i></a>
+                 </div>
+               </div>
+          </section>
      </footer>
     
 </body>
