responsive footer section done

--- a/index.html
+++ b/index.html
@@ -193,10 +193,10 @@
           </section>
 
           <!-- Offer section  -->
-           <section class="max-w-7xl mx-auto my-12 lg:my-36">
+           <section class="max-w-7xl mx-auto my-12 lg:mt-36 md:mb-96 mb-72">
             <h1 class="text-2xl md:text-4xl font-semibold text-primary-color mb-8 lg:mb-12  mx-4">Arrival & Offer</h1>
             <!-- offer box  -->
-            <div class="flex gap-5 flex-col md:flex-row lg:mb-4 mx-4">
+            <div class="flex gap-5 flex-col md:flex-row lg:mb-4 mx-4 pb-16">
                 <!-- box left -->
                 <div class="flex items-end bg-[#115414] rounded-2xl  lg:w-7/12 md:w-3/6 w-full">
                     <!-- box content  -->
@@ -224,15 +224,15 @@
            </section>
      </main>
 
-     <footer class="bg-primary-color">
+     <footer class="bg-primary-color relative pt-32 mt-96">
         <!-- grocery section  -->
-         <section class=" mx-4">
+         <section class="mx-4 absolute lg:-top-60 -top-96 left-0 right-0">
             <div class="max-w-7xl mx-auto px-4 py-8 bg-secondary-color rounded-3xl flex flex-col lg:flex-row items-center">
                 <!-- image area  -->
-                <div class="lg:w-6/12 my-14"><img class="mx-auto" src="./image/vegetable-busket.png" alt=""></div>
+                <div class="lg:w-6/12 md:my-14 mt-8 mb-6"><img class="mx-auto" src="./image/vegetable-busket.png" alt=""></div>
                 <!-- content area  -->
                 <div class="lg:w-6/12 text-center lg:text-left xl:pl-6">
-                    <h1 class="text-4xl font-semibold">Get Grocery News!</h1>
+                    <h1 class="text-4xl font-semibold text-primary-color md:text-text-color">Get Grocery News!</h1>
                     <p class="text-xl mt-5">Exclusive training tips, ticks, product deals and more.</p>
                     <input class="block w-full xl:w-3/5 lg:w-4/5 p-5 my-9 rounded-lg" type="email" placeholder="Enter Email....">
                     <button class="bg-primary-color text-white px-8 py-3 rounded-lg font-medium text-xl">Subscribe</button>
@@ -241,7 +241,7 @@
          </section>
 
          <!-- footer section  -->
-          <section class="max-w-7xl mx-auto grid grid-cols-4 px-2 pb-36">
+          <section class="max-w-7xl mx-auto grid lg:grid-cols-4 md:grid-cols-3 grid-cols-1 px-2 md:pb-36 pb-12 lg:pt-80 md:pt-96 pt-72">
             <!-- content area  -->
              <div class="">
                 <!-- logo  -->
@@ -249,20 +249,20 @@
                  <p class="text-xl text-white mt-3">Discover a world of treats, toys, and essentials handpicked for your furry friends</p>
              </div>
              <!-- navigation area  -->
-              <div class="col-span-2 text-center text-xl text-secondary-color">
+              <div class="lg:col-span-2 md:text-center text-xl text-secondary-color my-9 md:my-0">
                 <nav>
                     <ul>
                         <li><a href="#">Product</a></li>
-                        <li class="my-8"><a href="#">Service</a></li>
+                        <li class="md:my-8 my-5"><a href="#">Service</a></li>
                         <li><a href="#">Contact us</a></li>
                     </ul>
                 </nav>
               </div>
               <!-- link area  -->
-               <div class="text-right text-secondary-color flex flex-col justify-end">
+               <div class="md:text-right text-secondary-color flex flex-col justify-end">
                 <h3 class="mr-20">Follow Us</h3>
                 <!-- link  -->
-                 <div class="flex justify-end gap-6 text-lg mt-2">
+                 <div class="flex md:justify-end gap-6 text-lg mt-2">
                     <a href="#"><i class="fa-brands fa-facebook"></i></a>
                     <a href="#"><i class="fa-brands fa-instagram"></i></a>
                     <a href="#"><i class="fa-brands fa-linkedin"></i></a>
