--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
         @keyframes a1 {
   0%   {
         bottom:  40%;    
-        left:  50%;
+        left:  40%;
     }
   50% {
         bottom:  80%;
@@ -72,7 +72,7 @@
     }
   100% {
         bottom:  40%;    
-        left:  50%;
+        left:  40%;
     }
 }
 /* animation 2  */
@@ -132,7 +132,7 @@
 
         @keyframes a4 {
   0%   {
-        bottom:  20%;    
+        bottom:  30%;    
         left:  40%;
     }
   50% {
@@ -140,8 +140,8 @@
         left:  80%;
     }
   100% {
-        bottom:  40%;    
-        left:  50%;
+        bottom:  30%;    
+        left:  40%;
     }
     
 }
@@ -176,13 +176,13 @@
             <h1 class="text-4xl md:text-5xl lg:text-6xl font-semibold text-center mt-24">Freshness <span class="text-primary-color">You Can</span> <br>
                 <span class="text-primary-color">Count</span> On, Prices You’ll Love!
             </h1>
-            <p class="text-center font-normal md:text-xl lg:w-6/12 w-9/12 mx-auto my-9">Shop your daily essentials at unbeatable prices. From fresh produce to pantry staples, we’ve got you covered every day!</p>
+            <p class="text-center font-normal md:text-xl lg:w-6/12 w-9/12 mx-auto my-9 opacity-80">Shop your daily essentials at unbeatable prices. From fresh produce to pantry staples, we’ve got you covered every day!</p>
             <div class="md:w-4/5 lg:w-4/6 mx-auto relative">
                 <img class="w-full" src="./image/hero-vegetables.png" alt="">
-                <img class="absolute  animation1" src="./image/onion.png" alt="">
-                <img class="absolute  animation2" src="./image/tomato.png" alt="">
-                <img class="absolute  animation3" src="./image/onion.png" alt="">
-                <img class="absolute  animation4" src="./image/tomato.png" alt="">
+                <img class="w-1/6 absolute  animation1" src="./image/a1.png" alt="">
+                <img class="w-1/6 absolute  animation2" src="./image/a2.png" alt="">
+                <img class="w-1/6 absolute  animation3" src="./image/a3.png" alt="">
+                <img class="w-1/6 absolute  animation4" src="./image/a4.png" alt="">
             </div>
          </section>
      </header>
@@ -197,19 +197,19 @@
                  <div class="bg-secondary-color p-8 rounded-2xl">
                     <img class="mx-auto" src="./image/service.png" alt="">
                     <h2 class="text-center text-2xl font-semibold pt-6">24/7 Services </h2>
-                    <p class="text-center text-xl font-light py-3">We give our customer 24/7 service. Anyone can contact us any time. Our customer are satisfied</p>
+                    <p class="text-center text-xl font-light py-3 opacity-70">We give our customer 24/7 service. Anyone can contact us any time. Our customer are satisfied</p>
                  </div>
                 <!-- card 2 -->
                  <div class="bg-secondary-color p-8 rounded-2xl">
                     <img class="mx-auto" src="./image/delivery.png" alt="">
-                    <h2 class="text-center text-2xl font-semibold pt-6">24/7 Services </h2>
-                    <p class="text-center text-xl font-light py-3">We deliver with in 20 min. If we fail to deliver our product in time then we will give it free </p>
+                    <h2 class="text-center text-2xl font-semibold pt-6">Fast Delivery </h2>
+                    <p class="text-center text-xl font-light py-3 opacity-70">We deliver with in 20 min. If we fail to deliver our product in time then we will give it free </p>
                  </div>
                 <!-- card 3 -->
                  <div class="bg-secondary-color p-8 rounded-2xl">
                     <img class="mx-auto" src="./image/healthy.png" alt="">
-                    <h2 class="text-center text-2xl font-semibold pt-6">24/7 Services </h2>
-                    <p class="text-center text-xl font-light py-3">We provide high quality product. We make sure to our customer our product is good and fresh</p>
+                    <h2 class="text-center text-2xl font-semibold pt-6">Healthy Products </h2>
+                    <p class="text-center text-xl font-light py-3 opacity-70">We provide high quality product. We make sure to our customer our product is good and fresh</p>
                  </div>
              </div>
          </section>
@@ -406,8 +406,8 @@
                 <div class="lg:w-6/12 md:my-14 mt-8 mb-6"><img class="mx-auto" src="./image/vegetable-busket.png" alt=""></div>
                 <!-- content area  -->
                 <div class="lg:w-6/12 text-center lg:text-left xl:pl-6">
-                    <h1 class="text-4xl font-semibold text-primary-color md:text-text-color">Get Grocery News!</h1>
-                    <p class="text-xl mt-5">Exclusive training tips, ticks, product deals and more.</p>
+                    <h1 class="text-2xl md:text-4xl font-semibold text-primary-color md:text-text-color">Get Grocery News!</h1>
+                    <p class="md:text-xl mt-5">Exclusive training tips, ticks, product deals and more.</p>
                     <input class="block w-full xl:w-3/5 lg:w-4/5 p-5 my-9 rounded-lg" type="email" placeholder="Enter Email....">
                     <button class="bg-primary-color text-white px-8 py-3 rounded-lg font-medium text-xl">Subscribe</button>
                 </div>
